[gd_scene load_steps=5 format=3 uid="uid://d2uumqn3r68vf"]

[ext_resource type="Script" path="res://components/jukebox.gd" id="1_w2lfc"]
[ext_resource type="Texture2D" uid="uid://r8pcfsl0ywxd" path="res://images/test/genericItem_color_054.png" id="2_bklg3"]
[ext_resource type="Texture2D" uid="uid://orp0d5adlgxq" path="res://images/test/genericItem_color_085.png" id="3_w8q1j"]

[sub_resource type="CircleShape2D" id="CircleShape2D_30hmm"]
radius = 40.0

[node name="Jukebox" type="Node2D"]
script = ExtResource("1_w2lfc")

[node name="Machine" type="Sprite2D" parent="."]
texture = ExtResource("2_bklg3")

[node name="NextButton" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_w8q1j")

[node name="Area2D" type="Area2D" parent="NextButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextButton/Area2D"]
shape = SubResource("CircleShape2D_30hmm")

[connection signal="input_event" from="NextButton/Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="NextButton/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="NextButton/Area2D" to="." method="_on_area_2d_mouse_exited"]
